--- a/package.json
+++ b/package.json
@@ -30,6 +30,8 @@
     "react": "^17.0.1",
     "react-dom": "^17.0.1",
     "react-helmet": "^6.1.0",
+    "react-icons": "^4.2.0",
+    "react-responsive-carousel": "^3.2.18",
     "sharp": "^0.28.3",
     "styled-components": "^5.3.0"
   },
